@@ -10,32 +10,25 @@
 ###############################################################################
 
 # The marker message of an address breakpoint. 
-# Format: Address breakpoint: <file name>[address: <address>] <condition>
-CAddressBreakpoint.0=Address breakpoint:{0}[address: {1}]{2}
+CAddressBreakpoint.0=Address breakpoint: {0}
 
 CBreakpoint.1=\ [ignore count: {0}]
 CBreakpoint.2=\ if {0}
 
 # The marker message of a function breakpoint. 
-# Format: Function breakpoint: <file name>[function: <function name>] <condition>
-CFunctionBreakpoint.0=Function breakpoint:{0}[function: {1}]{2}
+CFunctionBreakpoint.0=Function breakpoint: {0}
 
 # The marker message of a line breakpoint. 
-# Format: Line breakpoint: <file name>[line: <line number>] <condition>
-CLineBreakpoint.0=Line breakpoint:{0}[line: {1}]
+CLineBreakpoint.0=Line breakpoint: {0}
 
 # The marker message of a write watchpoint. 
-# Format: Write watchpoint: <file name> at <expression> <condition>
-CWatchpoint.0=Write watchpoint{0}at{1}{2}
+CWatchpoint.0=Write watchpoint: {0}
 
 # The marker message of a read watchpoint. 
-# Format: Read watchpoint: <file name> at <expression> <condition>
-CWatchpoint.1=Read watchpoint{0}at{1}{2}
+CWatchpoint.1=Read watchpoint: {0}
 
 # The marker message of an access watchpoint. 
-# Format: Access watchpoint: <file name> at <expression> <condition>
-CWatchpoint.2=Access watchpoint{0}at{1}{2}
+CWatchpoint.2=Access watchpoint: {0}
 
 # The marker message of a watchpoint. 
-# Format: Watchpoint: <file name> at <expression> <condition>
-CWatchpoint.3=Watchpoint{0}at{1}{2}
+CWatchpoint.3=Watchpoint: {0}
